[package]
edition = "2021"
name = "rust"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.1"
actix-files = "0.6.0"
actix-multipart = "0.4.0"
actix-redis = "0.10.0"
actix-session = "0.5.0"
actix-web = "4.0.1"

handlebars = { version = "4.3.0", features = ["dir_source"] }
sqlx = { version = "0.5.13", features = [
    "runtime-actix-native-tls",
    "mysql",
    "chrono",
    "uuid",
] }

anyhow = "1.0.82"
chrono = { version = "0.4.38", features = ["serde"] }
derive_more = "0.99.17"
duct = "0.13.7"
duct_sh = "0.13.7"
futures-util = { version = "0.3.30", default-features = false, features = [
    "std",
] }
log = "0.4.21"
num_cpus = "1.16.0"
once_cell = "1.19.0"
rand = "0.8.5"
regex = "1.10.4"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
serde_qs = "0.9.2"
simplelog = "0.12.2"
