[package]
edition = "2021"
name = "private-is-rust"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.5"
actix-multipart = "0.6.1"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
actix-web = "4.5.1"

handlebars = { version = "5.1.2", features = ["dir_source"] }
sqlx = { version = "0.7.4", features = [
    "mysql",
    "chrono",
    "uuid",
    "runtime-tokio-native-tls",
] }

anyhow = "1.0.82"
chrono = { version = "0.4.38", features = ["serde"] }
derive_more = "0.99.17"
duct = "0.13.7"
duct_sh = "0.13.7"
futures-util = { version = "0.3.30", default-features = false, features = [
    "std",
] }
once_cell = "1.19.0"
rand = "0.8.5"
regex = "1.10.4"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
serde_qs = "0.13.0"
mime = "0.3.17"
memcache = "0.17.2"
